Display modal with user room follows. Include room follow count button with link to modal list in profile.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -32,6 +32,11 @@
     cursor: pointer;
 }
 
+.info button svg {
+    position: relative;
+    top: 1px;
+}
+
 .header p {
     margin: 5px 0 10px;
 }
