Include chat room name with posts if applicable with link to chat room.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -251,6 +251,12 @@
     margin-right: 2px;
 }
 
+.room_link {
+    font-weight: normal;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
 .time {
     font-weight: normal;
     font-size: 11px;
