Index wallet loader refactoring

--- a/renderer/public/style.css
+++ b/renderer/public/style.css
@@ -19,6 +19,11 @@ button, input[type=submit] {
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
 }
 
+button:not(:disabled),
+input[type=submit]:not(:disabled) {
+    cursor: pointer;
+}
+
 button:active, input[type=submit]:active {
     border-color: #705ebb;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.65);
