Warning about experimental on load screen

--- a/renderer/styles/addWallet.module.css
+++ b/renderer/styles/addWallet.module.css
@@ -57,6 +57,11 @@
     padding: 20px;
 }
 
+.boxMain .warning {
+    margin-top: 35px;
+    color: red;
+}
+
 .content {
     box-sizing: border-box;
     display: flex;
