Implemented copying UTXO id, among other things

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -264,6 +264,7 @@
 }
 
 .post_body {
+    white-space: pre-wrap;
     word-wrap: break-word;
     word-break: break-word;
     padding: 2px 5px 2px 5px;
